--- a/style.css
+++ b/style.css
@@ -25,11 +25,12 @@ body {
 
 main {
   /*background: rgb(196, 160, 253);*/
-  background: url(images/background.svg);
-  width: 375px;
-  height: 812px;
+  background: url(images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vw;
 
-  box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.315);
+  /*box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.315);*/
 }
 
 .container {
